Added seo stuff

--- a/public/index.html
+++ b/public/index.html
@@ -7,24 +7,33 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We know our mood changes throughout the days. But what if you could see it? Aura an easy to use mood tracking app which helps you to keep track of your mood!"
     />
+    <meta
+      name="og:description"
+      content="We know our mood changes throughout the days. But what if you could see it? Aura an easy to use mood tracking app which helps you to keep track of your mood!"
+    />
+    <meta name="og:image" content="%PUBLIC_URL%/ogimage.jpg" />
+    <meta name="og:title" content="Aura: See your mood in a whole new light" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@_AbhinavRajesh_" />
+    <meta
+      name="twitter:title"
+      content="Aura: See your mood in a whole new light"
+    />
+    <meta
+      name="twitter:description"
+      content="We know our mood changes throughout the days. But what if you could see it? Aura an easy to use mood tracking app which helps you to keep track of your mood!"
+    />
+    <meta name="twitter:url" content="https://aura-ar.vercel.app" />
+    <meta
+      name="twitter:image"
+      content="https://aura-ar.vercel.app/ogimage.jpg"
+    />
+    <meta name="twitter:creator" content="@_AbhinavRajesh_" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Aura: See your mood in a whole new light</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
