--- a/public/index.html
+++ b/public/index.html
@@ -48,5 +48,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      data-name="BMC-Widget"
+      data-cfasync="false"
+      src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+      data-id="abhinavrajesh"
+      data-description="Support me on Buy me a coffee!"
+      data-message="If you are enjoying Aura, consider supporting me with a coffee ☕. It would make my day :D"
+      data-color="#5F7FFF"
+      data-position="Right"
+      data-x_margin="18"
+      data-y_margin="18"
+    ></script>
   </body>
 </html>
