Added the readme, recommendation component, made pwa

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,12 @@
       content="https://aura-ar.vercel.app/ogimage.jpg"
     />
     <meta name="twitter:creator" content="@_AbhinavRajesh_" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Aura: See your mood in a whole new light</title>
   </head>
@@ -49,6 +54,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script
+      defer
       data-name="BMC-Widget"
       data-cfasync="false"
       src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
