--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,13 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Aura: See your mood in a whole new light</title>
+    <link href="https://chatbotish.vercel.app/index.css" rel="stylesheet" />
+    <script
+      src="https://chatbotish.vercel.app/index.js"
+      data-chatbotish
+      data-id="fvfmlWlB6biFbFzBNjTE"
+      async
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
