Chatbotish + BMC Position change

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
       data-description="Support me on Buy me a coffee!"
       data-message="If you are enjoying Aura, consider supporting me with a coffee ☕. It would make my day :D"
       data-color="#5F7FFF"
-      data-position="Right"
+      data-position="Left"
       data-x_margin="18"
       data-y_margin="18"
     ></script>
